refactor : 상품 입고 리스트 수정 및 입고 작성 수정

--- a/src/main/resources/templates/thymeleaf/goods/goodsInfo.html
+++ b/src/main/resources/templates/thymeleaf/goods/goodsInfo.html
@@ -29,7 +29,7 @@
     <tr><th colspan="2">
         <a th:href="|../goodsUpdate/${goodsCommand.goodsNum}|">상품수정</a> |
         <a th:href="|../goodsDelete/${goodsCommand.goodsNum}|">상품 삭제</a> |
-        <a th:href="|../../goodsIpgo/goodsIpgo/${goodsCommand.goodsNum}|">상품 입고</a> |
+        <a th:href="|../../goods/goodsIpgo/${goodsCommand.goodsNum}|">상품 입고</a> |
         <a href="goodsList">상품목록</a></th></tr>
 </table>
 </body>
