--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -1,54 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Insert title here</title>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/money.js"></script>
+    <script type="text/javascript">
+        var page = 0;
+        $(function(){
+            loadMoreItems();
+            $("#load-more").click(loadMoreItems);
+        });
+        function loadMoreItems(){
+            page ++;
+            $.ajax({
+                url : "/",
+                type:"post",
+                data : {"page": page},
+                dataType : "json",
+                success : function(model){
+                    var item  = '';
+                    item += '<table align = "center"  >';
+                    item += '<colgroup>';
+                    item += '<col span="3" width="300" height="330" /> ';
+                    item += '</colgroup>';
+                    item += '<tr>';
+                    $.each(model.list , function(idx, dto){
+                        item += '<td>';
+                        item += '<img src="/static/upload/'+ dto.goodsMainStoreImage +'" width="300" height="300"/><br />';
+                        item += dto.goodsName + '<br />';
+                        item += formatter.format(dto.goodsPrice) + '원<br />';
+                        item += '</td>';
+                        if((idx + 1) % 3 == 0) item += "</tr><tr>";
+                    });
+                    item += '</tr>';
+                    item += '</table>';
+                    $("#content").append(item);
+                    if(model.maxPage <= page )$("#load-more").css("display","none");
+                }
+            })
+
+        }
+    </script>
 </head>
 <body>
-    <div th:if="${session.auth != null}">
-        <ul>
-            <th:block th:if="${session.auth.grade == 'emp'}">
-                <li><a href="member/memberList">회원관리</a></li>
-                <li><a href="employee/employeeList">직원 관리</a></li>
-                <li><a href="mailling">메일보내기</a></li>
-                <li><a href="myPage/employeeMyPage">내 정보 보기</a></li>
-                <li><a href="goods/goodsList">상품리스트</a></li>
-                <li><a href="goods/goodsWrite">상품추가</a></li>
-                <li><a href="goods/goodsIpgoList">상품 입고 현황</a></li>
+hello miso shopping<br />
+<a href="smsSend">문자보내기</a>
+<a href="mailling">메일보내기</a>
+<div th:if="${session.auth != null}">
+    <ul>
+        <th:block th:if="${session.auth.grade == 'emp'}">
+            <li><a href="member/memberList">회원관리</a></li>
+            <li><a href="employee/employeeList">직원 관리</a></li>
+            <li><a href="mailling">메일보내기</a></li>
+            <li><a href="myPage/employeeMyPage">내 정보 보기</a></li>
+            <li><a href="goods/goodsList">상품리스트</a></li>
+            <li><a href="goods/goodsWrite">상품추가</a></li>
+            <li><a href="goods/goodsIpgoList">상품 입고 현황</a></li>
 
-            </th:block>
+        </th:block>
 
-            <th:block th:if="${session.auth.grade == 'mem'}">
-                <li><a href="myPage/memberMypage">내 정보 보기</a></li>
-            </th:block>
+        <th:block th:if="${session.auth.grade == 'mem'}">
+            <li><a href="myPage/memberMypage">내 정보 보기</a></li>
+        </th:block>
 
-            <li><a href="login/logout">로그아웃</a></li>
-        </ul>
-    </div>
-    <div th:if="${session.auth == null}">
-        <form action="/login/login" method="post" th:object="${loginCommand}">
-            <table border="1" align="center">
-                <tr>
-                    <td colspan="2"> 자동로그인 | 아이디저장</td>
-                </tr>
+        <li><a href="login/logout">로그아웃</a></li>
+    </ul>
+</div>
+<div th:if="${session.auth == null}">
+    <form action="/login/login" method="post" th:object="${loginCommand}" >
+        <table border="1" align="center">
+            <tr><td colspan="2">자동로그인 | 아이디저장</td></tr>
+            <tr><td>아 이 디 : <input type="text" name="userId" th:value="${loginCommand.userId}" /><br />
+                <span th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}"></span></td>
+                <td rowspan="2">
+                    <input type="image" src="/static/images/오케바리.gif" width="60" /></span>
+                </td></tr>
+            <tr><td>비밀번호: <input type="password" name="userPw" /><br />
+                <span th:if="${#fields.hasErrors('userPw')}" th:errors="*{userPw}"> </td></tr>
+            <tr><td colspan="2">아이디 / 비밀번호 찾기 |
+                <a href="/register/userAgree">회원가입</a></td></tr>
+        </table>
+    </form>
+</div>
+<div id="content">
 
-                <tr>
-                    <td>아이디 : <input type="text" name="userId" /></td> <br />
-                    <spqn th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}" th:value="${loginCommand.userId}"></spqn>
-                    <td rowspan="2"><input type="image" src="/static/images/서머%20브리즈%20밀짚모자1.png" width="60px" height="60px" /></td>
-                </tr>
-
-                <tr>
-                    <td>비밀번호 : <input type="password" name="userPw" /></td> <br />
-                    <spqn th:if="${#fields.hasErrors('userPw')}" th:errors="*{userPw}"></spqn>
-                </tr>
-
-                <tr>
-                    <td colspan="2">아이디 / 비밀번호찾기 | <a href="/register/userAgree">회원가입</a></td>
-                </tr>
-            </table>
-        </form>
-    </div>
+</div>
+<table align = "center" width="900" >
+    <tr><th><button id="load-more">더보기</button></th></tr>
+</table>
 </body>
 </html>
-
