--- a/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgoUpdate.html
+++ b/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgoUpdate.html
@@ -3,17 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Insert title here</title>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
+    <script type="text/javascript">
+        $(function (){
+            $("#frm").submit(function (){
+                if($("#ipgoDate").val() == ""){
+                    alert("입고일을 입력하세요.")
+                    $("#ipgoDate").focus();
+                    return false;
+                }
+                if($("#ipgoQty").val() <= 0){
+                    alert("수량을 입력하세요.")
+                    $("#ipgoQty").focus();
+                    return false;
+                }
+                if($("#madeDate").val() == ""){
+                    alert("제조일을 입력하세요.")
+                    $("#madeDate").focus();
+                    return false;
+                }
+                if($("#ipgoPrice").val() <= 0){
+                    alert("입고 가격을 입력하세요.")
+                    $("#ipgoPrice").focus();
+                    return false;
+                }
+            })
+        })
+    </script>
 </head>
 <body>
-<form action="../goodsIpgoModify" method="post">
+<form action="../goodsIpgoModify" method="post" id="frm">
     입고번호 : <input type="text" name="IpgoNum" readonly="readonly"
                   th:value="${goodsIpgoCommand.ipgoNum}"/><br />
     상품번호 : <input type="text" name="goodsNum" readonly="readonly"
                   th:value="${goodsIpgoCommand.goodsNum}"/><br />
-    입고일 : <input type="date" name="ipgoDate" th:value="${goodsIpgoCommand.ipgoDate}" /><br />
-    입고 수량 : <input type="number" name="ipgoQty" th:value="${goodsIpgoCommand.ipgoQty}"/><br />
-    제조일 : <input type="datetime-local" name="madeDate" th:value="${goodsIpgoCommand.madeDate}"/><br />
-    가격 : <input type="number" name="ipgoPrice" th:value="${goodsIpgoCommand.ipgoPrice}"/><br />
+    입고일 : <input type="date" name="ipgoDate" id="ipgoDate" th:value="${#dates.format(goodsIpgoCommand.ipgoDate,'yyyy-MM-dd')}" /><br />
+    입고 수량 : <input type="number" name="ipgoQty" id="ipgoQty" th:value="${goodsIpgoCommand.ipgoQty}" min="0" /><br />
+    제조일 : <input type="datetime-local" name="madeDate" id="madeDate" th:value="${goodsIpgoCommand.madeDate}" /><br />
+    가격 : <input type="number" name="ipgoPrice" id="ipgoPrice" th:value="${goodsIpgoCommand.ipgoPrice}" min="0" /><br />
     등록한 사원 : <input type="text"  th:value="${goodsIpgoCommand.empNum}" readonly="readonly"/><br />
     <input type="submit" value="수정완료" />
 </form>
