refactor : 메인페이지 csr 변경

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -37,6 +37,7 @@
                     item += '</table>';
                     $("#content").append(item);
                     if(model.maxPage <= page )$("#load-more").css("display","none");
+                    if(model.maxPage == 0) page = 0;
                 }
             })
 
