--- a/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgo.html
+++ b/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgo.html
@@ -1,72 +1,102 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>goodsIpgo.jsp</title>
+    <title>Insert title here</title><!-- 입고 할 상품을 먼저 검색 하도록 한다. popup창을 이용해 보자-->
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
+    <!-- ajaxSubmit -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
     <script type="text/javascript">
-        $("#regist").click(function (){
-            $("#frm").ajaxSubmit({ //csr방식
-                type : "POST",
-                url : "ipgoRegist",
-                beforeSubmit : function (){ //submit을 하기전 url로 이동하기전 유효성 검사 위해
-                    if($("#ipgoDate").val() == ""){
-                        alert("입고날을 입력해 주세요.");
-                        return false;
-                    }
-                    if($("#ipgoQty").val() == ""){
-                        alert("입고 수량을 입력해 주세요.");
-                        return false;
-                    }
-                    if($("#madeDate").val() == ""){
-                        alert("제조일을 입력해 주세요.");
-                        return false;
-                    }
-                    if($("#ipgoPrice").val() == ""){
-                        alert("입고 가격을 입력해 주세요.");
-                        return false;
-                    }
-                },
-                success : function (result){
-                    if(result == 200){
-                        location.href="goodsIpgoList";
-                    }
-                },
-                error : function (){
-                    alert("서버오류")
+        function validated(){
+            if($("#goodsNum").val() == ""){
+                alert("상품번호를 입력해주세요.");
+                return false;
+            }
+        }
+        $(function(){
+            /*
+            $("#frm").submit(function(){
+                if($("#goodsNum").val() == ""){
+                    alert("상품번호를 입력해주세요.");
+                    $("#goodsNum").focus();
+                    return false;
                 }
-            })
+                if($("#ipgoDate").val() == ""){
+                    alert("입고일를 입력해주세요.");
+                    $("#ipgoDate").focus();
+                    return false;
+                }
+                if($("#madeDate").val() == ""){
+                    alert("제조일를 입력해주세요.");
+                    $("#madeDate").focus();
+                    return false;
+                }
+                if($("#ipgoPrice").val() == 0){
+                    alert("금액를 입력해주세요.");
+                    $("#ipgoPrice").focus();
+                    return false;
+                }
+            });
+            */
+            $("#regist").click(function(){
+                $("#frm").ajaxSubmit({  //CSR
+                    type: "POST",
+                    url: "ipgoRegist",
+                    beforeSubmit : function(){
+                        if($("#goodsNum").val() == ""){
+                            alert("상품번호를 입력해주세요.");
+                            $("#goodsNum").focus();
+                            return false;
+                        }
+                        if($("#ipgoDate").val() == ""){
+                            alert("입고일를 입력해주세요.");
+                            $("#ipgoDate").focus();
+                            return false;
+                        }
+                        if($("#madeDate").val() == ""){
+                            alert("제조일를 입력해주세요.");
+                            $("#madeDate").focus();
+                            return false;
+                        }
+                        if($("#ipgoPrice").val() == 0){
+                            alert("금액를 입력해주세요.");
+                            $("#ipgoPrice").focus();
+                            return false;
+                        }
+                    },
+                    success : function(result){
+                        if(result==200){
+                            location.href="goodsIpgoList";
+                        }
+                    },
+                    error : function(){
+                        alert("서버오류");
+                    }
+                });
+            });
         });
     </script>
 </head>
 <body>
-<a href="/">홈</a>
-<ul>
-    <li><a href="goodsIpgoList">상품 입고 현황</a></li>
-</ul>
-<form action="../ipgoRegist" method="post" id="frm">
-    <table border = "1" width ="600" align="center">
-
-        <input type="hidden" name="goodsNum" th:value="${goodsNum}"/>
-
-        <tr><th>입고일</th>
-            <td><input type="date" name= "ipgoDate" id="ipgoDate" /></td></tr>
-        <tr><th>입고 수량</th>
-            <td><input type="number" name= "ipgoQty" id="ipgoQty" /></td></tr>
-
-        <tr>
-            <th>제조일</th>
-            <td><input type="datetime-local" name="madeDate" id="madeDate" /></td>
-        </tr>
-        <tr>
-            <th>가격</th>
-            <td><input type="number" name="ipgoPrice" id="ipgoPrice" value="0" min="0" max="100000" /></td>
-        </tr>
-<!--         <input type="submit" id="btn" value="입고등록" />-->
-        <input type="button" value="입고 등록" id="regist" />
-
-    </table>
-</form>
+<div id="result">
+    <ul>
+        <li><a href="goodsList">상품관리</a></li>
+        <li><a href="goodsIpgo">상품 입고</a></li>
+        <li><a href="goodsIpgoList">상품 입고 현황</a></li>
+    </ul>
+    <form action="ipgoRegist" method="post" id="frm"  > <!-- onsubmit="return validated();" -->
+        입고번호 : <input type="text" name= "goodsIpgoNum" id="goodsIpgoNum" th:value="${goodsIpgoCommand.goodsIpgoNum}"/>자동부여<br />
+        상품번호 : <input type="text" name= "goodsNum" id="goodsNum" />
+        <button type="button" id="btn" >상품 검색</button> <br />
+        상품명 : <input type="text" name= "goodsName" id="goodsName" /><br />
+        입고일 : <input type="date" name= "ipgoDate" id="ipgoDate" /><br />
+        입고 수량 : <input type="number" name= "ipgoQty" id="ipgoQty" value="1" min="1" /><br />
+        제조일 : <input type="datetime-local" name= "madeDate" id="madeDate" /><br />
+        가격 : <input type="number" name= "ipgoPrice" id="ipgoPrice" value="0" min="0" max="100000" /><br />
+        <!-- <input type="submit" value="submit 입고 등록" /> -->
+        <input type="button" value="입고 등록" id="regist"/>
+    </form>
+</div>
 </body>
 </html>
