--- a/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgoList.html
+++ b/src/main/resources/templates/thymeleaf/goodsIpgo/goodsIpgoList.html
@@ -2,24 +2,27 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>goodsIpgoList.jsp</title>
+    <title>Insert title here</title>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/checkbox.js"></script>
 </head>
 <body>
-<a href="/">홈</a>
 <ul>
+    <li><a href="goodsList">상품관리</a></li>
+    <li><a href="goodsIpgo">상품 입고</a></li>
     <li><a href="goodsIpgoList">상품 입고 현황</a></li>
 </ul>
-<table border=1 width="600" align="center">
-    <caption>입고현황</caption>
-    <div>
-        <tr th:each="goodsIpgoCommand : ${goodsIpgoCommand}">
-            <td><a th:href="|goodsIpgoDetail/${goodsIpgoCommand.ipgoNum}|">입고번호 : [[${goodsIpgoCommand.ipgoNum}]]</a></td>
-            <td>상품번호 : [[${goodsIpgoCommand.goodsNum}]]</td>
-            <td>상품가격 : [[${goodsIpgoCommand.ipgoPrice}]]</td>
-            <td>수량 : [[${goodsIpgoCommand.ipgoQty}]]</td>
-            <th>입고일 : [[${goodsIpgoCommand.ipgoDate}]]</th>
-        </tr>
-    <div>
+입고리스트<br />
+<table width=600 border=1>
+    <tr><th>번호</th><th>입고 번호</th><th>상품 번호</th><th>수량</th><th>입고일</th><th>가격</th>
+    <tr th:each="dto, idx : ${list}">
+        <th>[[${idx.count}]]</th>
+        <th><a th:href="|goodsIpgoDetail?ipgoNum=${dto.goodsIpgoNum}&goodsNum=${dto.goodsNum}|">[[${dto.goodsIpgoNum}]]</a></th>
+        <th><a th:href="@{goodsIpgoDetail(ipgoNum=${dto.goodsIpgoNum},goodsNum=${dto.goodsNum})}">[[${dto.goodsNum}]]</a></th>
+        <th>[[${dto.ipgoQty}]]</th>
+        <th>[[${#dates.format(dto.ipgoDate, 'yyyy-MM-dd')}]]</th>
+        <th>[[${#numbers.formatCurrency(dto.ipgoPrice) + "원" }]]</th> <!-- W100,000원 -->
+    </tr>
 </table>
 </body>
 </html>
