--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -76,7 +76,7 @@ hello miso shopping<br />
             <tr><td>아 이 디 : <input type="text" name="userId" th:value="${loginCommand.userId}" /><br />
                 <span th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}"></span></td>
                 <td rowspan="2">
-                    <input type="image" src="/static/images/오케바리.gif" width="60" /></span>
+                    <input type="image" src="/static/images/서머브리즈밀짚모자1.png" width="60" /></span>
                 </td></tr>
             <tr><td>비밀번호: <input type="password" name="userPw" /><br />
                 <span th:if="${#fields.hasErrors('userPw')}" th:errors="*{userPw}"> </td></tr>
