--- a/src/main/resources/templates/thymeleaf/item/detailView.html
+++ b/src/main/resources/templates/thymeleaf/item/detailView.html
@@ -6,22 +6,56 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
     <script type="text/javascript" src="/static/js/money.js"></script>
     <script type="text/javascript">
+        $(function(){
+            $("#wish").click(function(){
+                $.ajax({
+                    type : "post",
+                    url : "../wishItem",
+                    data : {"goodsNum":"[[${dto.goodsDTO.goodsNum }]]"},
+                    success:function(){
+                        if($("#wish").attr("src") == "/static/images/hart1.jpg"){
+                            $("#wish").attr("src","/static/images/hart.jpg");
+                        }else{
+                            $("#wish").attr("src","/static/images/hart1.jpg");
+                        }
+                    },
+                    error:function(){
+                        alert('로그인 아웃 되었습니다.\n다시 로그인 해 주세요.');
+                        location.href="/";
+                        return false;
+                    }
+                });
+            });
 
-      $("#wish").click(function (){
-        $.ajax({
-          url : "wishItem",
-          type : "post",
-
-        })
-      })
+            $("#cartBtn").click(function(){
+                $.ajax({
+                    type:"post",
+                    url : "..cart",
+                    data : {"goodsNum":"[[${dto.goodsDTO.goodsNum}]]", "cartQty":$("#cartQty").val()},
+                    success:function(){
+                        con = confirm("장바구니로 이동하시겠습니까?");
+                        if(con){
+                            location.href="cartList.item";
+                        }else{
+                            document.location.reload();
+                        }
+                    },
+                    error : function(){
+                        alert("로그 아웃되었습니다. 다시로그인 해주세요.");
+                        window.open("loginCk.login","loginck","width=400,height=400");
+                    }
+                });
+            });
+        });
 
     </script>
+
 </head>
 <body>
 <table width="800" align="center">
   <caption>[[${dto.goodsDTO.goodsName }]] 상품정보입니다.</caption>
-  <tr><td rowspan="5"><img th:src="|/static/upload/${dto.goodsDTO.goodsMainStoreImage}|" height="200" width="200"/></td>
-    <td>[[${dto.goodsDTO.goodsName }]]</td>
+  <tr><td rowspan="5"><img th:src="|/static/upload/${dto.goodsDTO.goodsMainImage}|" height="200" width="200"/></td>
+      <td>[[${dto.goodsDTO.goodsName }]]</td>
   </tr>
   <tr><td>[[${dto.goodsDTO.goodsPrice }]]</td></tr>
   <tr><td>들여다본 수 : [[${dto.goodsDTO.visitCount }]]</td>
@@ -35,8 +69,8 @@
     <th:block th:if="${dto.stock == 0 or dto.stock == null}">
       품절입니다.
     </th:block>
-    <img src="/static/images/서머브리즈밀짚모자1.png" width="20" height="20" id="wish" />
 
+      <img src="/static/images/hart.jpg" width="20" id="wish"/>
     찜</td></tr>
   <tr><td colspan="2">
     <span id="descript">제품 상세 설명</span> |
