--- a/src/main/resources/templates/thymeleaf/item/detailView.html
+++ b/src/main/resources/templates/thymeleaf/item/detailView.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Insert title here</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
-    <script type="text/javascript" src="/static/js/money.js"></script>
     <script type="text/javascript">
         $(function(){
             $("#wish").click(function(){
+                /*
                 $.ajax({
                     type : "post",
                     url : "../wishItem",
@@ -25,17 +25,42 @@
                         return false;
                     }
                 });
+                */
+                var xhr = new XMLHttpRequest();
+                xhr.open("POST", "../wishItem",true);
+                xhr.setRequestHeader("Content-Type", "application/json");
+                xhr.onload = function(){
+                    if (xhr.status == 200) { // 정상적으로 처리 되었을 때 가져오는 값 200
+                        if($("#wish").attr("src") == "/static/images/hart1.jpg"){
+                            $("#wish").attr("src","/static/images/hart.jpg");
+                        }else{
+                            $("#wish").attr("src","/static/images/hart1.jpg");
+                        }
+                    }else{
+                        alert('로그인 아웃 되었습니다.\n다시 로그인 해 주세요.');
+                        location.href="/";
+                        return false;
+                    }
+                }
+                var formData = JSON.stringify({
+                    "goodsNum":"[[${dto.goodsDTO.goodsNum }]]"
+                })
+                xhr.send(formData);
             });
 
             $("#cartBtn").click(function(){
                 $.ajax({
                     type:"post",
-                    url : "..cart",
-                    data : {"goodsNum":"[[${dto.goodsDTO.goodsNum}]]", "cartQty":$("#cartQty").val()},
+                    url : "../cart",
+                    contentType: "application/json",
+                    data: JSON.stringify({
+                        "goodsNum": "[[${dto.goodsDTO.goodsNum}]]",
+                        "cartQty": $("#cartQty").val()
+                    }),
                     success:function(){
                         con = confirm("장바구니로 이동하시겠습니까?");
                         if(con){
-                            location.href="cartList.item";
+                            location.href="../cartList";
                         }else{
                             document.location.reload();
                         }
@@ -47,37 +72,31 @@
                 });
             });
         });
-
     </script>
-
 </head>
 <body>
 <table width="800" align="center">
-  <caption>[[${dto.goodsDTO.goodsName }]] 상품정보입니다.</caption>
-  <tr><td rowspan="5"><img th:src="|/static/upload/${dto.goodsDTO.goodsMainImage}|" height="200" width="200"/></td>
-      <td>[[${dto.goodsDTO.goodsName }]]</td>
-  </tr>
-  <tr><td>[[${dto.goodsDTO.goodsPrice }]]</td></tr>
-  <tr><td>들여다본 수 : [[${dto.goodsDTO.visitCount }]]</td>
-  <tr><td>수량 : <input type="number" min="1" step="1" value="1" id="cartQty"/> </td></tr>
-  <tr><td>
-    <th:block th:if="${dto.stock != 0 and dto.stock != null}">
-      <button type="button" id="cartBtn">장바구니</button> |
-      <button type="button" id="buyItem">바로구매 </button> |
-    </th:block>
-
-    <th:block th:if="${dto.stock == 0 or dto.stock == null}">
-      품절입니다.
-    </th:block>
-
-      <img src="/static/images/hart.jpg" width="20" id="wish"/>
-    찜</td></tr>
-  <tr><td colspan="2">
-    <span id="descript">제품 상세 설명</span> |
-    <span id="review">리뷰</span> |
-    <span id="inquire" onclick="inquire()">상품문의</span>
-  </td></tr>
-  <tr><td colspan="2"><div id="content"></div></td></tr>
+    <caption>[[${dto.goodsDTO.goodsName }]] 상품정보입니다.</caption>
+    <tr><td rowspan="5"><img th:src="|/static/upload/${dto.goodsDTO.goodsMainStoreImage }|" height="200" width="200" /></td>
+        <td>[[${dto.goodsDTO.goodsName }]]</td></tr>
+    <tr>                <td>[[${dto.goodsDTO.goodsPrice }]]</td></tr>
+    <tr>                <td>들여다본 수 : [[${dto.goodsDTO.visitCount }]]</td>
+    <tr>                <td>수량 : <input type="number" min="1" step="1" value="1" id="cartQty"/> </td></tr>
+    <tr>                <td>
+        <th:block th:if="${dto.stock != 0 and dto.stock != null}">
+            <button type="button" id="cartBtn">장바구니</button> |
+            <button type="button" id="buyItem">바로구매 </button> |
+        </th:block>
+        <th:block th:if="${dto.stock == 0 or dto.stock == null}">
+            품절입니다. 곧 입고될 예정입니다.
+        </th:block>
+        <img src="/static/images/hart1.jpg" id="wish" width="20"/>찜</td></tr>
+    <tr><td colspan="2">
+        <span id="descript">제품 상세 설명</span> |
+        <span id="review">리뷰</span> |
+        <span id="inquire" onclick="inquire();">상품문의</span>
+    </td></tr>
+    <tr><td colspan="2"><div id="content"></div></td></tr>
 </table>
 </body>
 </html>
