--- a/src/main/resources/templates/thymeleaf/item/wishList.html
+++ b/src/main/resources/templates/thymeleaf/item/wishList.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Title</title>
+    <title>찜 목록</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.1.min.js"></script>
     <script type="text/javascript">
         $(function (){
@@ -9,16 +9,21 @@
                 url: "wish",
                 success: function (result) {
                     console.log(result);
-                    let item = "<table align='center'><tr>";
+                    let item = "<table align='center' border='1'><tr><th>상품 번호</th><th>멤버 번호</th><th>날짜</th><th>상품 이름</th><th>상품 가격</th><th>상품 설명</th><th>방문 수</th><th>메인 이미지</th></tr>";
+
                     $.each(result, function(idx, dto) {
-                        item += '<td>상품 번호 :'+dto.goodsNum+'</td>';
-                        item += '<td>멤버 번호 :'+dto.memberNum+'</td>';
-                        item += '<td>날짜: ' + new Date(dto.wishDate).toLocaleString() + '</td>';
-                        if ((idx + 1) % 3 === 0) {
-                            item += '</tr><tr>';
-                        }
+                        item += '<tr>';
+                        item += '<td>' + dto.goodsNum + '</td>';
+                        item += '<td>' + dto.memberNum + '</td>';
+                        item += '<td>' + new Date(dto.wishDate).toLocaleString() + '</td>';
+                        item += '<td>' + dto.goodsDTO.goodsName + '</td>';
+                        item += '<td>' + dto.goodsDTO.goodsPrice + '</td>';
+                        item += '<td>' + dto.goodsDTO.goodsContents + '</td>';
+                        item += '<td>' + dto.goodsDTO.visitCount + '</td>';
+                        item += '<td><img src="' + dto.goodsDTO.goodsMainImage + '" alt="상품 이미지" width="100"/></td>';
+                        item += '</tr>';
                     });
-                    item += '</tr></table>';
+                    item += '</table>';
 
                     $("#wishTable").html(item);
                 },
@@ -31,7 +36,7 @@
 </head>
 <body>
 <h3>찜 목록</h3>
-    <div id="wishTable">
-    </div>
+<div id="wishTable">
+</div>
 </body>
 </html>
